--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,11 +12,13 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="fontFamily">@font/robot_regular</item>
     </style>
 
     <style name="Theme.PrototypeBelajarKotlin.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="fontFamily">@font/robot_regular</item>
     </style>
 
     <style name="Theme.PrototypeBelajarKotlin.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
